Quote strings that break syntax highlighting.

--- a/src/protocol/develop/actions/C1 - Contract Offer.yaml
+++ b/src/protocol/develop/actions/C1 - Contract Offer.yaml
@@ -137,7 +137,7 @@ fields:
     notes: "Issuer Type - Amendments can be restricted to a vote."
 
   - name: IssuerLEI
-    label: Issuer's Legal Entity Identifier
+    label: "Issuer's Legal Entity Identifier"
     description: "Null is valid. A Legal Entity Identifier (or LEI) is an international identifier made up of a 20-character identifier that identifies distinct legal entities that engage in financial transactions. It is defined by ISO 17442.[1] Natural persons are not required to have an LEI; they’re eligible to have one issued, however, but only if they act in an independent business capacity.[2] The LEI is a global standard, designed to be non-proprietary data that is freely accessible to all.[3] As of December 2018, over 1,300,000 legal entities from more than 200 countries have now been issued with LEIs."
     type: fixedchar
     size: 20
@@ -166,7 +166,7 @@ fields:
     notes: ""
 
   - name: OperatorLEI
-    label: Operator's Legal Entity Identifier
+    label: "Operator's Legal Entity Identifier"
     description: "Null is valid. A Legal Entity Identifier (or LEI) is an international identifier made up of a 20-character identifier that identifies distinct legal entities that engage in financial transactions. It is defined by ISO 17442.[1] Natural persons are not required to have an LEI; they’re eligible to have one issued, however, but only if they act in an independent business capacity.[2] The LEI is a global standard, designed to be non-proprietary data that is freely accessible to all.[3] As of December 2018, over 1,300,000 legal entities from more than 200 countries have now been issued with LEIs."
     type: fixedchar
     size: 20
@@ -328,7 +328,7 @@ fields:
 # Functions for configuring the action
 functions:
     - name: SetIssuerAddress
-      description: Sets the issuer's mailing address on the contract.
+      description: "Sets the issuer's mailing address on the contract."
       type: set
       params:
           - name: unit
