--- a/src/protocol/develop/actions/A2 - Asset Creation.yaml
+++ b/src/protocol/develop/actions/A2 - Asset Creation.yaml
@@ -21,11 +21,7 @@ rules:
   outputs:
     - name: Contract
       label: "Contract Public Address"
-      comments: Dust Limit
-
-    - name: ContractOperator
-      label: "Contract Fee Address"
-      comments: "Contract Operator's Fee (Optional)"
+      comments: "Required so that users can monitor transactions to the contract for updates to contract/assets."
 
 fields:
   - name: Header
