--- a/src/protocol/develop/actions/C2 - Contract Formation.yaml
+++ b/src/protocol/develop/actions/C2 - Contract Formation.yaml
@@ -21,7 +21,7 @@ rules:
   outputs:
     - name: Contract
       label: Contract Public Address
-      comments:
+      comments: "Required so that users can monitor transactions to the contract for updates to contract/assets."
 
 fields:
   - name: Header
