--- a/src/protocol/develop/types/Entity.yaml
+++ b/src/protocol/develop/types/Entity.yaml
@@ -31,13 +31,21 @@ fields:
     example_value: "54930084UKLVMY22DS16"
     notes: "ISO 17442 - https://en.wikipedia.org/wiki/Legal_Entity_Identifier"
 
-  - name: Address
-    label: Entity Address
+  - name: AddressIncluded
+    label: Address Included
     description: "Registered/Physical/mailing address(HQ). Y-1/N-0, N means there is no issuer address."
     type: bool
     example_hex: 01
     example_value: "1"
     notes: "Entity/Contracting Party X Details"
+    includes:
+      - UnitNumber
+      - BuildingNumber
+      - Street
+      - SuburbCity
+      - TerritoryStateProvinceCode
+      - CountryCode
+      - PostalZIPCode
 
   - name: UnitNumber
     label: Unit Number
