--- a/src/protocol/develop/actions/C1 - Contract Offer.yaml
+++ b/src/protocol/develop/actions/C1 - Contract Offer.yaml
@@ -184,17 +184,17 @@ fields:
     example_value: "1"
     notes: "Qty of Assets - Amendments can be restricted to a vote."
 
-  - name: ReferendumProposal
-    label: Referendum Proposal
-    description: "A Referendum is permitted for Proposals (outside of smart contract scope)."
+  - name: IssuerProposal
+    label: Issuer Proposal
+    description: "An Issuer is permitted to make proposals (outside of smart contract scope)."
     type: bool
     example_hex: 01
-    example_value: "true"
+    example_value: true
     notes: "General Governance"
 
-  - name: InitiativeProposal
-    label: Initiative Proposal
-    description: "An initiative is permitted for Proposals (outside of smart contract scope)."
+  - name: HolderProposal
+    label: Holder Proposal
+    description: "A holder is permitted to make proposals (outside of smart contract scope)."
     type: bool
     example_hex: 01
     example_value: true
