--- a/src/protocol/develop/actions/C2 - Contract Formation.yaml
+++ b/src/protocol/develop/actions/C2 - Contract Formation.yaml
@@ -180,20 +180,20 @@ fields:
     example_value: "1"
     notes: "Qty of Assets - Amendments can be restricted to a vote."
 
-  - name: ReferendumProposal
-    label: Referendum Proposal
-    description: "A Referendum is permitted for Contract-Wide Proposals (outside of smart contract scope)."
+  - name: IssuerProposal
+    label: Issuer Proposal
+    description: "The issuer is permitted to make proposals (outside of smart contract scope)."
     type: bool
     example_hex: 01
-    example_value: 1
+    example_value: true
     notes: "General Governance"
 
-  - name: InitiativeProposal
-    label: Initiative Proposal
-    description: "An initiative is permitted for Contract-Wide Proposals (outside of smart contract scope)."
+  - name: HolderProposal
+    label: Holder Proposal
+    description: "A holder is permitted to make proposals (outside of smart contract scope)."
     type: bool
-    example_hex: 00
-    example_value: 0
+    example_hex: 01
+    example_value: true
     notes: ""
 
   - name: Registries
