--- a/src/protocol/develop/actions/G1 - Proposal.yaml
+++ b/src/protocol/develop/actions/G1 - Proposal.yaml
@@ -1,5 +1,5 @@
 #
-# Proposal Action: Allows Token Issuers/Holders to propose a change (aka Initiative/Shareholder vote).  A significant cost - specified in the Contract Formation - can be attached to this action to reduce spam, as the resulting vote will be put to all token owners.
+# Proposal Action: Allows Issuers/Token Holders to propose a change (aka Initiative/Shareholder vote).  A significant cost - specified in the Contract Formation - can be attached to this action when sent from Token Holders to reduce spam, as the resulting vote will be put to all token owners.
 #
 
 code: G1
@@ -7,7 +7,7 @@ code: G1
 metadata:
   name: Proposal
   label: Proposal Action
-  description: "Proposal Action - Allows Token Issuers/Holders to propose a change (aka Initiative/Shareholder vote).  A significant cost - specified in the Contract Formation - can be attached to this action to reduce spam, as the resulting vote will be put to all token owners."
+  description: "Proposal Action - Allows Issuers/Token Holders to propose a change (aka Initiative/Shareholder vote).  A significant cost - specified in the Contract Formation - can be attached to this action when sent from Token Holders to reduce spam, as the resulting vote will be put to all token owners."
   validation: Contract/Asset Amendment or nothing
   rejection: Rejection
 
@@ -87,7 +87,7 @@ fields:
 
   - name: VoteOptions
     label: Vote Options
-    description: "Length 1-255 bytes. 0 is not valid. Each byte allows for a different vote option.  Typical votes will likely be multiple choice or Y/N. Vote instances are identified by the Tx-ID. AB000000000 would be chosen for Y/N (binary) type votes."
+    description: "Length 1-255 bytes. 0 is not valid. Each byte allows for a different vote option. Typical votes will likely be multiple choice or Y/N. Vote instances are identified by the Tx-ID. AB would be used for Y/N (binary) type votes. When Specific is true, only AB is a valid value."
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 8
@@ -97,7 +97,7 @@ fields:
 
   - name: VoteMax
     label: Vote Max
-    description: "Range: 1-X. How many selections can a voter make in a Ballot Cast.  1 is selected for Y/N (binary). When Specific is true, only 1 is a valid value."
+    description: "Range: 1-X. How many selections can a voter make in a Ballot Cast. 1 is selected for Y/N (binary). When Specific is true, only 1 is a valid value."
     type: uint
     size: 1
     example_hex: 0f
