--- a/src/protocol/develop/actions/G3 - Ballot Cast.yaml
+++ b/src/protocol/develop/actions/G3 - Ballot Cast.yaml
@@ -30,7 +30,7 @@ fields:
     type: Header
     notes: "Common header data for all actions."
 
-  - name: VoteTxID
+  - name: VoteTxId
     label: Vote Tx ID
     description: "Tx ID of the Vote the Ballot Cast is being made for."
     type: TxId
