--- a/src/protocol/develop/actions/G5 - Result.yaml
+++ b/src/protocol/develop/actions/G5 - Result.yaml
@@ -66,7 +66,7 @@ fields:
     description: "Each element contains details of which fields to modify, or delete. Because the number of fields in a Contract and Asset is dynamic due to some fields being able to be repeated, the index value of the field needs to be calculated against the Contract or Asset the changes are to apply to. In the event of a Vote being created from this Initiative, the changes will be applied to the version of the Contract or Asset at that time."
     type: Amendment[]
 
-  - name: VoteTxID
+  - name: VoteTxId
     label: Vote Tx ID
     description: "Link to the Vote Action txn."
     type: TxId
