--- a/src/assets/develop/SHC - Common Share.yaml
+++ b/src/assets/develop/SHC - Common Share.yaml
@@ -27,6 +27,7 @@ fields:
   - name: TransferLockout
     label: TransferLockout
     type: Timestamp
+    description: A period of time where the asset is unable to be transferred.  After the transfer lockout period, the assets can be transferred.
     example: 11/4/2019 18:00:00
     span: full
     displayOrder: 3
