--- a/src/assets/develop/COU - Coupon.yaml
+++ b/src/assets/develop/COU - Coupon.yaml
@@ -9,7 +9,7 @@ metadata:
   label: Coupon
   kind: Utility
   category: Coupons
-  description: Value exchange coupon
+  description: A voucher entitling the holder to a discount off a particular product or service.
   examples:
     - Sale Price Discount
     - Kickstarter Campaign
@@ -17,9 +17,8 @@ metadata:
 
 fields:
   - name: Version
-    label: Version
+    label: Payload Version
     type: uint
-    description: Payload Version
     size: 1
     example: 0
     computed: true
