--- a/src/assets/develop/LOY - Loyalty Points.yaml
+++ b/src/assets/develop/LOY - Loyalty Points.yaml
@@ -16,9 +16,8 @@ metadata:
 
 fields:
   - name: Version
-    label: Version
+    label: Payload Version
     type: uint
-    description: Payload Version
     size: 1
     example: 0
     computed: true
