Update enforcement messages.

--- a/src/protocol/develop/actions/A1 - Asset Definition.yaml
+++ b/src/protocol/develop/actions/A1 - Asset Definition.yaml
@@ -16,7 +16,7 @@ rules:
   inputs:
     - name: Issuer
       label: "Issuer's Public Address"
-      comments:
+      comments: Contract operator is not allowed to create assets.
 
   outputs:
     - name: Contract
